--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <h2>Page 2</h2>
 
 </div>
-<div  id="button"><a href="index.html">Back to page guy the king</a></div>
+<div  id="button"><a href="index.html">Back to page Niv is  the king</a></div>
 
 </body>
 </html>              
