--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div  id="button"><a href="index2.html">Go To page number 2</a></div>
 
         <div>
-            <button class=" btn btn-danger" onclick="like()" > Like</button>
+            <button class=" btn btn-danger" onclick="like()" > Likes</button>
         </div>
         <div>
             <button class=" btn btn-success" onclick="" > Add Source</button>
