--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class ="container" >
-    <h2>StudentBook-Find Your Study Meterials:</h2>
+    <h2>StudentWork-Find Your Study Meterials:</h2>
     <div class="flex-box">
         <div>
              <button class= " btn btn-primary" onclick="myfunc()"> Search for Info</button>
@@ -32,10 +32,7 @@
     </div>
 </div>
 
-
     <script src="script.js"
-
-
     ></script>
 </body>
 </html>
