--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <div>
             <button class=" btn btn-secondary" onclick="reset()" > Reset</button>
         </div>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <input type="text" placeholder="Search..">
+          </div>
+          
     </div>
     <div class=" flex-box">
         <div id="flex-box-res"></div>
