--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
             <input type="text" placeholder="Search..">
+            
+            <button class="btn btn-secondary" onclick="showSearch(placeholder)" button type="submit">Submit</button>
           </div>
           
     </div>
