--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div select class="topnav">
         <form>
-            what is your search:<input type="text" id="name"/><br/>
+            what is your search:<input type="text" id="Search"/><br/>
             <input type="button" value="Submit" onclick="showSearch();";/>
         </form>
         </div>
