--- a/second.html
+++ b/second.html
@@ -7,6 +7,7 @@
     <title>My file</title>
 </head>
 <body>
+
 <!-- <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Dropdown</button>
     <div id="myDropdown" class="dropdown-content">
@@ -69,7 +70,8 @@
 
 </div>
 <div>
-    <button class= " Search" onclick="myfunc2()"> Search</button>
+  <div  id="button"><a href="index.html">Search</a></div>
+  <button type="button" onclick="myFunction()">Set background image</button>
 </div>
   <script src="script.js"
     ></script>
