--- a/second.html
+++ b/second.html
@@ -70,8 +70,12 @@
 
 </div>
 <div>
-  <div  id="button"><a href="index.html">Search</a></div>
-  <button type="button" onclick="myFunction()">Set background image</button>
+  <div class="custom-select2" style="width:200px;">
+
+  <button  type="button" id="Search-b" ><a href="index.html" onclick="myFunction()">Search</a></button></div>
+
+</div>
+
 </div>
   <script src="script.js"
     ></script>
