--- a/index.html
+++ b/index.html
@@ -9,26 +9,21 @@
 <body>
     <div class ="container" >
     <h2>StudentWork-Intruduction:</h2>
+    <div select class="topnav">
+        <form>
+            <input type="text" placeholder="Search.." style="border-radius: 12px; margin-left: 400px; width: 200px;" id="Search"/><br/>
+            <input type="button" value="Search" style="margin-left: 470px; margin-top: 10px;" onclick="showSearch();"></input>
+        </form>
+    </div>
     <div class="flex-box">
-        <div>
-             <button class= " btn btn-primary" onclick="myfunc()"> Search for Info</button>
-        </div>
-        <div  id="button"><a href="index2.html">Go To page number 2</a></div>
-
         <div>
             <button class=" btn btn-danger" onclick="like()" > Likes</button>
         </div>
         <div>
-            <button class=" btn btn-success" onclick="" > Add Source</button>
+            <button class=" btn btn-success" onclick="" >Upload</button>
         </div>
         <div>
-            <button class=" btn btn-secondary" onclick="reset()" > Reset</button>
-        </div>
-        <div select class="topnav">
-        <form>
-            what is your search:<input type="text" id="Search"/><br/>
-            <input type="button" value="Submit" onclick="showSearch();";/>
-        </form>
+            <button class=" btn btn-secondary" onclick="reset()" >Reset</button>
         </div>
     
           
