--- a/second.html
+++ b/second.html
@@ -7,7 +7,15 @@
     <title>My file</title>
 </head>
 <body>
+  <style>
+    body{
+        background-image: url('pictures/Big_data2.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: orange;
 
+    }
+</style>
 <!-- <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Dropdown</button>
     <div id="myDropdown" class="dropdown-content">
@@ -48,7 +56,7 @@
     </select>
 </div>
 
-<div class="custom-select" style="width:200px;" >
+<div class="custom-select" style="width:200px; " >
     <select>
     <option value="0">בחר מחלקה</option>
     <option value="1">הנדסת מערכות מידע</option>
@@ -80,8 +88,4 @@
   <script src="script.js"
     ></script>
 </body>
-<style>
-    div {
-      background-image: url('picture/hogworts2.jpg');
-    }
-    </style>
+
