--- a/second.html
+++ b/second.html
@@ -9,10 +9,12 @@
 <body>
   <style>
     body{
-        background-image: url('pictures/Big_data2.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-color: orange;
+      background-image: url('pictures/logo.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-position-y:220px ;
+      /* background-color: rgb(248, 248, 132); */
+      background-position: bottom;
 
     }
 </style>
@@ -42,7 +44,10 @@
         </div>
     </div> -->
 
-
+<div class="blessHeader">
+  <h1>ברוכים הבאים!</h1>
+  <p>אנא בחרו את הקורס אליו תרצו לגשת</p>
+</div>
  <div class="flex-box">
 
 <div class="custom-select" style="width:200px;" >
