--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div select class="topnav">
             <form>
                 <input type="text" placeholder="Search.." style="border-radius: 12px;margin-top: 10px; margin-left: 400px; width: 200px;" id="Search"/><br/>
-                <input type="button" value="Search" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 470px; margin-top: 10px; background-color: orange;" onclick="showSearch();"></input>
+                <input type="button" value="Search" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 470px; margin-top: 10px; border-radius: 12px; background-color: orange; color: white;" onclick="showSearch();"></input>
             </form>
         </div>
 
         
         <div>
-            <button class=" btn btn-success" onclick="" style="margin-left: -100px; border-radius: 12px;background-color: orange;">Upload</button>
+            <button class=" btn btn-success" onclick="" style="margin-left: -100px; border-radius: 12px;background-color: orange; ">Upload</button>
         </div>
         <div>
             <button class=" btn btn-secondary" onclick="reset()" style="margin-left: -100px; margin-top: 10px;border-radius: 12px;background-color: orange;" >Clear</button>
