--- a/second.html
+++ b/second.html
@@ -83,10 +83,22 @@
 
 </div>
 <div>
+ 
   <div class="custom-select2" style="width:200px;">
-
-  <button  type="button" id="Search-b" ><a href="index.html" onclick="myFunction()">Search</a></button></div>
-
+  <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >Search</a></button></div>
+</div>
+<style>
+   
+    button{
+        margin-left:-90px;
+        margin-top: 10px;
+        background-color: rgb(243, 243, 105);
+        border-radius: 12px;
+        color: grey;
+        font-size: 22px;
+    }
+</style>
+</div>
 </div>
 
 </div>
