--- a/second.html
+++ b/second.html
@@ -45,8 +45,8 @@
     </div> -->
 
 <div class="blessHeader">
-  <h1>ברוכים הבאים!</h1>
-  <p>אנא בחרו את הקורס אליו תרצו לגשת</p>
+  <h1> !ברוכים הבאים לרשת החברתית הלימודית</h1>
+  <p>שלום, ניב מאירי</p>
 </div>
  <div class="flex-box">
 
@@ -81,17 +81,18 @@
     </select>
 </div>
 
+<div class="custom-select2" style="width:400px;">
+  <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
+</div>
 </div>
 <div>
  
-  <div class="custom-select2" style="width:200px;">
-  <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >Search</a></button></div>
-</div>
+
 <style>
    
     button{
-        margin-left:-90px;
-        margin-top: 10px;
+        margin-left:-310px;
+        margin-top: -45px;
         background-color: rgb(243, 243, 105);
         border-radius: 12px;
         color: grey;
