--- a/loginSite.html
+++ b/loginSite.html
@@ -26,7 +26,7 @@
         </div>
        
         <div>
-            <button  type="button" id="loginButton" style="height: 28px; width: 100px" ><a href="second.html" >התחבר</a></button></div>
+            <button  type="button" id="loginButton" style="height: 28px; margin-right:50px ; width: 100px" ><a href="second.html" >התחבר</a></button></div>
         </div>
         <style>
             h2{
