--- a/second.html
+++ b/second.html
@@ -3,21 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style2.css">
-    <!-- <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css> -->
+     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css> 
     <title>My file</title>
 </head>
 <body>
-  <style>
-    body{
-      background-image: url('pictures/logo.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-position-y:220px ;
-      /* background-color: rgb(248, 248, 132); */
-      background-position: bottom;
 
-    }
-</style>
 <!-- <div class="dropdown">
     <button onclick="myFunction()" class="dropbtn">Dropdown</button>
     <div id="myDropdown" class="dropdown-content">
@@ -80,7 +70,6 @@
         <option value="4">הפקולטה למדעי החברה</option>
     </select>
 </div>
-
 <div class="custom-select2" style="width:400px;">
   <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
 </div>
@@ -89,9 +78,8 @@
  
 
 <style>
-   
     button{
-        margin-left:-310px;
+        margin-left:-370px;
         margin-top: -45px;
         background-color: rgb(243, 243, 105);
         border-radius: 12px;
@@ -101,9 +89,7 @@
 </style>
 </div>
 </div>
-
 </div>
   <script src="script.js"
     ></script>
 </body>
-
