--- a/second.html
+++ b/second.html
@@ -3,93 +3,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style2.css">
-     <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css> 
+    <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css> 
     <title>My file</title>
 </head>
 <body>
 
-<!-- <div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-    <div id="myDropdown" class="dropdown-content">
-      <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-      <a href="#about">About</a>
-      <a href="#base">Base</a>
-      <a href="#blog">Blog</a>
-      <a href="#contact">Contact</a>
-      <a href="#custom">Custom</a>
-      <a href="#support">Support</a>
-      <a href="#tools">Tools</a>
-    </div> -->
-    <!-- <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-    <div class="dropdown">
-        <button class="dropbtn" onclick="myFunction()">Dropdown
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content" id="myDropdown">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-    </div> -->
+  <div class="blessHeader">
+    <h1> !ברוכים הבאים לרשת החברתית הלימודית</h1>
+    <p>שלום, ניב מאירי</p>
+  </div>
 
-<div class="blessHeader">
-  <h1> !ברוכים הבאים לרשת החברתית הלימודית</h1>
-  <p>שלום, ניב מאירי</p>
-</div>
- <div class="flex-box">
+  <!-- <div class="flex-box" style="margin-left: 100px;"> -->
 
-<div class="custom-select" style="width:200px;" >
-    <select>
-    <option value="0">בחר קורס</option>
-    <option value="1">מבוא לתכנות</option>
-    <option value="2">חדוא 1</option>
-    <option value="3">מודלים חישוביים</option>
-    <option value="4">מבוא לאלגברה לינארית</option>
-    <option value="5">תכנות מתקדם</option>
-    </select>
-</div>
+    <div class="custom-select" style="width: 200px;height: 60px;border-color: transparent; display: flex; flex-direction: row;margin-left: 670px; margin-top: 50px;" >
+        <select style="margin-right: 10px;">
+          <option value="0">בחר קורס</option>
+          <option value="1">מבוא לתכנות</option>
+          <option value="2">חדוא 1</option>
+          <option value="3">מודלים חישוביים</option>
+          <option value="4">מבוא לאלגברה לינארית</option>
+          <option value="5">תכנות מתקדם</option>
+        </select>
+        <select  style="margin-right: 10px;">
+          <option value="0">בחר מחלקה</option>
+          <option value="1">הנדסת מערכות מידע</option>
+          <option value="2">הנדסת תוכנה</option>
+          <option value="3">הנדסת חשמל</option>
+          <option value="4">הנדסת חומרים</option>
+        </select>
+        <select>
+          <option value="0">בחר פקולטה</option>
+          <option value="2">הפקולטה למדעי הבריאות</option>
+          <option value="1">הפקולטה למדעי ההנדסה</option>
+          <option value="3">הפקולטה למדעי הרוח</option>
+          <option value="4">הפקולטה למדעי החברה</option>
+        </select>
+          
+    </div>
+<!-- 
+    <div class="custom-select" style="width:200px; " >
+        <select>
+          <option value="0">בחר מחלקה</option>
+          <option value="1">הנדסת מערכות מידע</option>
+          <option value="2">הנדסת תוכנה</option>
+          <option value="3">הנדסת חשמל</option>
+          <option value="4">הנדסת חומרים</option>
+        </select>
+    </div>
 
-<div class="custom-select" style="width:200px; " >
-    <select>
-    <option value="0">בחר מחלקה</option>
-    <option value="1">הנדסת מערכות מידע</option>
-    <option value="2">הנדסת תוכנה</option>
-    <option value="3">הנדסת חשמל</option>
-    <option value="4">הנדסת חומרים</option>
-    </select>
-</div>
+    <div class="custom-select" style="width:200px;">
+        <select>
+          <option value="0">בחר פקולטה</option>
+          <option value="2">הפקולטה למדעי הבריאות</option>
+          <option value="1">הפקולטה למדעי ההנדסה</option>
+          <option value="3">הפקולטה למדעי הרוח</option>
+          <option value="4">הפקולטה למדעי החברה</option>
+        </select>
+    </div>       -->
 
-<div class="custom-select" style="width:200px;">
-    <select>
-        <option value="0">בחר פקולטה</option>
-        <option value="2">הפקולטה למדעי הבריאות</option>
-        <option value="1">הפקולטה למדעי ההנדסה</option>
-        <option value="3">הפקולטה למדעי הרוח</option>
-        <option value="4">הפקולטה למדעי החברה</option>
-    </select>
-</div>
-<div class="custom-select2" style="width:400px;">
-  <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
-</div>
-</div>
-<div>
- 
+  <!-- </div> -->
+  <div class="custom-select2" style="width:400px;">
+    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
+  </div> 
 
-<style>
-    button{
-        margin-left:-370px;
-        margin-top: -45px;
-        background-color: rgb(243, 243, 105);
-        border-radius: 12px;
-        color: grey;
-        font-size: 22px;
-    }
-</style>
-</div>
-</div>
-</div>
+
+  <style>
+      button{
+          margin-left:550px;
+          margin-top: -56px;
+          background-color: rgb(243, 243, 105);
+          border-radius: 12px;
+          color: grey;
+          font-size: 22px;
+      }
+  </style>
   <script src="script.js"
     ></script>
 </body>
