--- a/second.html
+++ b/second.html
@@ -18,7 +18,7 @@
     <div class="custom-select" style="width: 200px;height: 60px;border-color: transparent; display: flex; flex-direction: row;margin-left: 670px; margin-top: 50px;" >
         <select style="margin-right: 10px;">
           <option value="0">בחר קורס</option>
-          <option value="1">מבוא לתכנות</option>
+          <option value="1">אלגוריתמים</option>
           <option value="2">חדוא 1</option>
           <option value="3">מודלים חישוביים</option>
           <option value="4">מבוא לאלגברה לינארית</option>
