--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <button class=" btn btn-success"  style="margin-left: 10px; border-radius: 30px;background-color: orange; "><a href="https://www.youtube.com/results?search_query=dfs"></a>הוסף קובץ</button>
             </div>
             <div class="pic">
-            <div id="flex-box-res2" style="margin-top: 10px;" >
-                <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/pngguru.com.png');background-repeat: no-repeat;background-size: 50px; background-position: center;"></button>
+            <div id="flex-box-res2" style="margin-top: 10px; border-color: transparent;" >
+                <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/orangeLike.png');background-repeat: no-repeat;background-size: 42px; background-position: center;"></button>
                 <button class=" btn btn-success" onclick="like()" style="margin-right: 30px;margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
 
             </div>
@@ -37,17 +37,17 @@
             </div>
             <div class="pic2">
          
-                <div id="flex-box-res4" style="margin-top: 10px;" >
-                    <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/pngguru.com.png');background-repeat: no-repeat;background-size: 50px; background-position: center;"></button>
+                <div id="flex-box-res4" style="margin-top: 10px;  border-color: transparent;" >
+                    <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/orangeLike.png');background-repeat: no-repeat;background-size: 42px; background-position: center;"></button>
                     <button class=" btn btn-success" onclick="like()" style="margin-right: 30px;  margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
 
                 </div>
     
                 </div>
                 <div class="pic3">
-                    <div id="flex-box-res5" style="margin-top: 10px;" >
-                        <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/pngguru.com.png');background-repeat: no-repeat;background-size: 50px; background-position: center;"></button>
-                        <button class=" btn btn-success" onclick="like()" style="  margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
+                    <div id="flex-box-res5" style="margin-top: 10px;  border-color: transparent;" >
+                        <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/orangeLike.png');background-repeat: no-repeat;background-size: 42px; background-position: center;"></button>
+                        <button class=" btn btn-success" onclick="like()" style=" margin-right: 30px; ;margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
 
 
                     </div>
