--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div select class="topnav">
         <form>
             <input type="text" placeholder="Search.." style="border-radius: 12px;margin-top: 10px; margin-left: 650px; width: 200px;" id="Search"/><br/>
-            <input type="button" value="Search" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 718px; margin-top: 10px; border-radius: 12px; background-color: orange; color: white;" onclick="showSearch();"></input>
+            <input type="button" value="חפש" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 718px; margin-top: 10px; border-radius: 12px; background-color: orange; color: white;" onclick="showSearch();"></input>
         </form>
     </div>
 
