--- a/second.html
+++ b/second.html
@@ -40,30 +40,10 @@
         </select>
           
     </div>
-<!-- 
-    <div class="custom-select" style="width:200px; " >
-        <select>
-          <option value="0">בחר מחלקה</option>
-          <option value="1">הנדסת מערכות מידע</option>
-          <option value="2">הנדסת תוכנה</option>
-          <option value="3">הנדסת חשמל</option>
-          <option value="4">הנדסת חומרים</option>
-        </select>
-    </div>
-
-    <div class="custom-select" style="width:200px;">
-        <select>
-          <option value="0">בחר פקולטה</option>
-          <option value="2">הפקולטה למדעי הבריאות</option>
-          <option value="1">הפקולטה למדעי ההנדסה</option>
-          <option value="3">הפקולטה למדעי הרוח</option>
-          <option value="4">הפקולטה למדעי החברה</option>
-        </select>
-    </div>       -->
 
   <!-- </div> -->
   <div class="custom-select2" style="width:400px;">
-    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
+    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="searchOnly.html"   >חפש</a></button></div>
   </div> 
 
 
