--- a/searchOnly.html
+++ b/searchOnly.html
@@ -17,7 +17,7 @@
     <div select class="topnav">
         <form>
             <input type="text" placeholder="Search.." style="border-radius: 12px;margin-top: 10px; margin-left: 650px; width: 200px;" id="Search"/><br/>
-            <input type="button" value="Search" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 718px; margin-top: 10px; border-radius: 12px; background-color: orange; color: white;" onclick="showSearch();"></input>
+            <button type="button" style="border-collapse: collapse;border-radius: 10px; ;margin-left: 718px; margin-top: 10px; border-radius: 12px; background-color: orange; color: white;"><a href="index.html" style="color: white;">חפש</a></button>
         </form>
     </div>
 
