--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <div class="pic" style="border-top-color: transparent; border-right-color: transparent; border-left-color: transparent; border-bottom-color: grey; margin-top: 40px;">
                 <div id="flex-box-res2" style="margin-top: 10px; border-color: transparent;" >
                     <button onclick="like()" style="border-color: transparent;width: 40px ;border-radius: 30px; background-image: url('pictures/pngguru.com.png');background-repeat: no-repeat;background-size: 50px; background-position: center;"></button>
-                    <button class=" btn btn-success" onclick="like()" style="margin-right: 30px;margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
+                    <button class=" btn btn-success" onclick="window.location.href='https://www.youtube.com/watch?v=iaBEKo5sM7w&ab_channel=GoGATEIIT'"
+                    style="margin-right: 30px;margin-left: 5px;color: transparent;border-color: transparent;width: 38px;border-radius: 100px;background-image: url('pictures/linkpic.png');background-position: center;background-repeat: no-repeat;background-size: 25px;">G</button>
                 </div>
             </div>   
 
