--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
         
-        <div class=" flex-box" style="width: 1100px; margin-left: 200px;">
+        <div class=" flex-box" id="flex-box" style="width: 1100px; margin-left: 200px;">
             <div id="flex-box-res" style="margin-top: 10px; border-top-color: transparent; border-right-color: transparent; border-left-color: transparent; border-bottom-color: grey; margin-top: 40px;" >
                     <button class=" btn btn-success"  style="margin-left: 10px; border-radius: 30px;background-color: orange; "><a href="https://www.youtube.com/results?search_query=dfs"></a>הוסף קובץ</button>
             </div>
