--- a/second.html
+++ b/second.html
@@ -43,7 +43,7 @@
 
   <!-- </div> -->
   <div class="custom-select2" style="width:400px;">
-    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html"   >חפש</a></button></div>
+    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html" style="color: grey;"  >חפש</a></button></div>
   </div> 
 
 
