--- a/second.html
+++ b/second.html
@@ -12,11 +12,9 @@
     <h1> !ברוכים הבאים לרשת החברתית הלימודית</h1>
     <p>שלום, ניב מאירי</p>
   </div>
-
   <!-- <div class="flex-box" style="margin-left: 100px;"> -->
-
     <div class="custom-select" style="width: 200px;height: 60px;border-color: transparent; display: flex; flex-direction: row;margin-left: 670px; margin-top: 50px;" >
-        <select style="margin-right: 10px;">
+        <select id="Course" style="margin-right: 10px;">
           <option value="0">בחר קורס</option>
           <option value="1">אלגוריתמים</option>
           <option value="2">חדוא 1</option>
@@ -27,23 +25,17 @@
         <select  style="margin-right: 10px;">
           <option value="0">בחר מחלקה</option>
           <option value="1">הנדסת מערכות מידע</option>
-          <option value="2">הנדסת תוכנה</option>
-          <option value="3">הנדסת חשמל</option>
-          <option value="4">הנדסת חומרים</option>
         </select>
         <select>
           <option value="0">בחר פקולטה</option>
-          <option value="2">הפקולטה למדעי הבריאות</option>
           <option value="1">הפקולטה למדעי ההנדסה</option>
-          <option value="3">הפקולטה למדעי הרוח</option>
-          <option value="4">הפקולטה למדעי החברה</option>
         </select>
           
     </div>
 
   <!-- </div> -->
   <div class="custom-select2" style="width:400px;">
-    <button  type="button" id="Search-b"  style="height: 48px; width: 110px " ><a href="index.html" style="color: grey;"  >חפש</a></button></div>
+    <button onclick="GoToPage()" type="button" id="Search-b"  style="height: 48px; width: 110px ;">חפש</button></div>
   </div> 
 
 
